--- a/BioMath.tex
+++ b/BioMath.tex
@@ -16,20 +16,21 @@
 \tableofcontents
 \section{Why systems?}
 
-Biology as traditionally been the science without mathematics, a place where the non-mathematically oriented  could develop  scientific careers far from the trials and tribulations of linear Algebra, differential calculus and complex analysis. This way of thinking remained dominant in the field until the end of the twentieth century and the sequencing of the human genome. Then, biologists found themselves drowning in data. Genomic sequences provided a list of all the relevant parts needed to build and operate a cell and, by extension, a full living being. But connecting all those parts and the relevant regulatory signals, also present in the genome, proved to be impossible due to several reasons. First, the sheer number of components, in the tens of thousands, were very difficult to represent using conventional means, such as diagrams, lists or sketches in a blackboard. Second, acting on a component that is part of a network initiates the propagation of multiple signals criss-crossing one another and doubling back onto themselves in ways that are very difficult to follow. Third, when the nature of interaction between all the components is quantitative, the same kind of action (inhibiting a step of a pathway) can lead to very different outcomes depending on the intensity of the stimulus. Finally, the combination of these three effects often results counter-intuitive behaviors.
+Biology as traditionally been the science without mathematics, a place where the non-mathematically oriented  could develop  scientific careers far from the trials and tribulations of linear algebra, differential calculus and complex analysis. This way of thinking remained dominant in the field until the end of the twentieth century and the sequencing of the human genome.
+ Then, biologists found themselves drowning in data. Genomic sequences provided a list of all the relevant parts needed to build and operate a cell and, by extension, a full living being. But connecting all those parts and the relevant regulatory signals, also present in the genome, proved to be impossible due to several reasons. First, the sheer number of components, in the tens of thousands, were very difficult to represent using conventional means, such as diagrams, lists or sketches in a blackboard. Second, acting on a component that is part of a network initiates the propagation of multiple signals criss-crossing one another and doubling back onto themselves in ways that are very difficult to follow. Third, when the nature of interaction between all the components is quantitative, the same kind of action (inhibiting a step of a pathway) can lead to very different outcomes depending on the intensity of the stimulus. Finally, the combination of these three effects often results counter-intuitive behaviors.
 
 Fortunately for modern biology, these problems had already been encountered in the domain of engineering. The study of machines formed by many different components into a network of complex interactions started in the years following world war II and continued with great intensity in the following decades. The discipline that resulted from this was called systems theory, and its incredible success fueled an era of technological innovation in fields as diverse as mechanics, electronics and chemical engineering.
 
 At the heart of systems Theory is the definition of a system as an ensemble of components connected in a certain manner and limited by a boundary. signals and materials can cross the boundary into the system -- inputs -- or out of it -- outputs.
 
-As a complex system with numerous inter-connected components, social and economic systems are  rich sources of surprising behaviors. lets assume I replace all the light bulbs in my home with power saving leds that consume half as much electricity. With such a measure, I will  lower my immediate electricity consumption and save money. In light of these effects, which are short-term and local, I might be temped to think that I am contributing to an overall reduction in energy consumption in my community. Experience, however, shows the opposite. The development and adoption of machines that are more efficient tends to increase the overall consumption in the long run. My modest action changing light bulbs at home, modifies a very intricate system and signals start rippling through it. A reduction in electricity demand of homes, frees kilowatts that can be sent elsewhere. The utility company can sell the surplus electricity at a lower price for industrial purposes, so it will be used anyway. So beyond the boundary of my neighborhood, there is a bigger system that includes power plants, factories and much more. This bigger system, has compensated my reduction in power consumption with an equal increase somewhere else. Moreover, producing energy has an energy cost so the energy that has gone to industrial purposes can be redirected to oil extraction or the construction of new solar panels. This, together with the invention of more efficient engines and machinery lowers the cost of oil extraction, which, in turn enables more energy production at cheaper prices that incentivate consumers to use more energy. In the long term, I might end up  buying new appliances that consume as much electricity as I saved before, maybe even more! So the long term effects ofmy action end up contradicting my initial intention. This phenomenom is called the Jevons paradox and, if we are surprised by it is due to our innate tendency to think both local and short term. If I place the boundary of my system along the walls of my home, I am not taking into account the effects of my actions on other actors, like my neighbors or the appliance company. These effects, will eventually double back on me in the long term through things such as lower electricity prices, power discounts and fancy new appliances.
+As a complex system with numerous inter-connected components, social and economic systems are  rich sources of surprising behaviors. lets assume I replace all the light bulbs in my home with power saving leds that consume half as much electricity. With such a measure, I will  lower my immediate electricity consumption and save money. In light of these effects, which are short-term and local, I might be temped to think that I am contributing to an overall reduction in energy consumption in my community. Experience, however, shows the opposite. The development and adoption of machines that are more efficient tends to increase the overall consumption in the long run. My modest action changing light bulbs at home, modifies a very intricate system and signals start rippling through it. A reduction in electricity demand of homes, frees kilowatts that can be sent elsewhere. The utility company can sell the surplus electricity at a lower price for industrial purposes, so it will be used anyway. So beyond the boundary of my neighborhood, there is a bigger system that includes power plants, factories and much more. This bigger system, has compensated my reduction in power consumption with an equal increase somewhere else. Moreover, producing energy has an energy cost so the energy that has gone to industrial purposes can be redirected to oil extraction or the construction of new solar panels. This, together with the invention of more efficient engines and machinery lowers the cost of oil extraction, which, in turn enables more energy production at cheaper prices that incentivate consumers to use more energy. In the long term, I might end up  buying new appliances that consume as much electricity as I saved before, maybe even more! So the long term effects of my action end up contradicting my initial intention. This phenomenom is called the Jevons paradox and, if we are surprised by it is due to our innate tendency to think both local and short term. If I place the boundary of my system along the walls of my home, I am not taking into account the effects of my actions on other actors, like my neighbors or the appliance company. These effects, will eventually double back on me in the long term through things such as lower electricity prices, power discounts and fancy new appliances.
 
-Just as the Jevons paradox may result in unpredictable consequences due to the complexity of social systems, so can happen with ecological, physiological and biochemical systems. Lets have a look at medical treatments and their side effects. Cortisol is a common treatment used to prevent strong inflammatory or immune responses, and patients undergoing such treatment exhibits a symptom commonly known as ``moon face''. The face of the patient acquires a rounder than usual form due to the accumulation of fat on the cheeks and around the throat. The cause for this effect is, surprisigly, that cortisol boosts metabolism and burns calories. The sudden consumption of energy in the form of carbohydrates triggers a response to store more energy in the form of fat-tissue. What are the factors that favor this side effect? Is everybody equally vulnerable to it? Is there a genetic predisposition? Why the face? Will any metabolic boost result in fat accumulation? In order to answer any of these questions, we need systems theory.
+Just as the Jevons paradox may result in unpredictable consequences due to the complexity of social systems, so can happen with ecological, physiological and biochemical systems. Lets have a look at medical treatments and their side effects. Cortisol is a common treatment used to prevent strong inflammatory or immune responses, and patients undergoing such treatment exhibits a symptom commonly known as ``moon face''. The face of the patient acquires a rounder than usual form due to the accumulation of fat on the cheeks and around the throat. The cause for this effect is, surprisingly, that cortisol boosts metabolism and burns calories. The sudden consumption of energy in the form of carbohydrates triggers a response to store more energy in the form of fat-tissue. What are the factors that favor this side effect? Is everybody equally vulnerable to it? Is there a genetic predisposition? Why the face? Will any metabolic boost result in fat accumulation? In order to answer any of these questions, we need systems theory.
 
 
 \subsection{Systems biology}
 
-There is no question that complicated networks of interacting components have to be carefully studied in order to understand how they work. Any biologist has spent a significant amount of time studying such intricate networks and memorizing carefully drawn diagrams of metabolic fluxes, regulatory interactions, gene expression, hormone effects, immunologic responses or food-webs. Even though this memorization effort is clearly necessary, we have just seen why it is not sufficient. So as long as we limit our approach to elucidate, draw and memorize these complex networks, we are just deluding themselves into  believing we know something that we do not.
+There is no question that complicated networks of interacting components have to be carefully studied in order to understand how they work. Any biologist has spent a significant amount of time studying such intricate networks and memorizing carefully drawn diagrams of metabolic fluxes, regulatory interactions, gene expression, hormone effects, immunologic responses or food-webs. Even though this memorization effort is clearly necessary, we have just seen why it is not sufficient. So as long as we limit our approach to elucidate, draw and memorize these complex networks, we are just deluding ourselves into  believing we know something that we do not.
 
 But biologists are lucky for there is another group of specialists that has already faced similar difficulties and has been reasonably successful dealing with them. Engineers have developed precise tools for drawing diagrams, making calculations on how signal propagate and making quantitative predictions based on them. Many of these tools have already been translated to biological systems and this has resulted in the creation of new fields such as bioinformatics, computational neuro-science or systems biology. The emergence of these new fields has resulted in a much better understanding of complex biological problems such as biochemical and genetic regulation, cognitive processes and mental illness, but it has also resulted in productive exchanges for other sciences such as artificial neural networks, which are at the center of recent developments in artificial intelligence.
 
@@ -86,7 +87,7 @@ So our doubling time for $r=0.15$ is 1.74 hours, about an hour and 45 min.
 
 \subsection{Dealing with many things at once: vectors and matrices}
 
-The  individuals in a population are not always identical. Most of the time, biological populations have many different types of individuals. Cells differentiate into types, animals grow in different stages, microbes can form spores \dots Fortunately, we have the mathematical tools to reflect that diversity. Consider a population of parasites that reproduce through eggs. Every week, some eggs hatch and produce new parasites that in time will produce more eggs. We can easily capture the idea of our population having two different individuals: eggs, $x_1$ and animals, $x_2$. When we want to refer to all individuals of the species, regardless of their type, we will use verctor $\mathbf{x}$.
+The  individuals in a population are not always identical. Most of the time, biological populations have many different types of individuals. Cells differentiate into types, animals grow in different stages, microbes can form spores \dots Fortunately, we have the mathematical tools to reflect that diversity. Consider a population of parasites that reproduce through eggs. Every week, some eggs hatch and produce new parasites that in time will produce more eggs. We can easily capture the idea of our population having two different individuals: eggs, $x_1$ and animals, $x_2$. When we want to refer to all individuals of the species, regardless of their type, we will use vector $\mathbf{x}$.
 
 \begin{equation}
 \mathbf{x} =\left( \begin{array}{c} x_1 \\  x_2 \end{array} \right)
@@ -131,7 +132,7 @@ A matrix is just a square of numbers that connects elements represented in its c
 \end{tabular}
 \end{center}
 
-And now, we will place a number for each arrow in the drawing. The starting point of the arrow will be the column where we place the number and the ending point of the arrow wil be the column. Our table will look like this.
+And now, we will place a number for each arrow in the drawing. The starting point of the arrow will be the column where we place the number and the ending point of the arrow will be the column. Our table will look like this.
 
 \begin{center}
 	\begin{tabular}{c|ccc}
@@ -261,7 +262,7 @@ Knowing this, we can already predict that multiplying vector $\begin{pmatrix}  2
 \subsection{The eigenvalues of the Leslie matrix}
 
 \subsubsection{Real eigenvalues}
-Leslie matrices tend to have very special eigenvalues. In most cases there is one dominant eigenvalue, larger than one, while every other eigenvalue is less than one. as a result of this, any starting population evolves towards the age structure dictated by the dominant eigenvvector after a few generations. Figure \ref{fig:leslie_phase} plots the amount of adult vs senior mice along several generations. We can clearly see how, after only three generations, the numbers move along a straight line, which is the direction of the dominant eigenvector.
+Leslie matrices tend to have very special eigenvalues. In most cases there is one dominant eigenvalue, larger than one, while every other eigenvalue is less than one. as a result of this, any starting population evolves towards the age structure dictated by the dominant eigenvector after a few generations. Figure \ref{fig:leslie_phase} plots the amount of adult vs senior mice along several generations. We can clearly see how, after only three generations, the numbers move along a straight line, which is the direction of the dominant eigenvector.
 
 \begin{figure}
 	\begin{center}
@@ -287,7 +288,7 @@ L=\begin{pmatrix}
 \end{pmatrix}
 \end{equation}
 
-Inspection of the Leslie matrix already tells us a few things about the biology of locusts. first of all, the zero inthe first row and first column tells us that hoppers are not yet sexually matrue $f_2=0$ but adult locusts are extremely prolific with an average production of 1,000 eggs per individual. The survival rate of eggs is extremely low, with the survival rte of hopper being more that twice as high but still very low, with only 5\% of hoppers surviving until the adult stage.
+Inspection of the Leslie matrix already tells us a few things about the biology of locusts. first of all, the zero in the first row and first column tells us that hoppers are not yet sexually mature $f_2=0$ but adult locusts are extremely prolific with an average production of 1,000 eggs per individual. The survival rate of eggs is extremely low, with the survival rte of hopper being more that twice as high but still very low, with only 5\% of hoppers surviving until the adult stage.
 
 \begin{figure}
 	\begin{center}
@@ -298,7 +299,7 @@ Inspection of the Leslie matrix already tells us a few things about the biology 
 	\label{fig:Llocusts}
 \end{figure}
 
-Simulating nine generations with this matrix, as can be seen in figure \ref{fig:Llocusts} shows a very different behavior. This population does not grow as before, but keeps oscillating instead. Moreover, the age structure does not remain fixed, it keeps switching between three diferent shapes.
+Simulating nine generations with this matrix, as can be seen in figure \ref{fig:Llocusts} shows a very different behavior. This population does not grow as before, but keeps oscillating instead. Moreover, the age structure does not remain fixed, it keeps switching between three different shapes.
 
 We can also view a projection of the amount of eggs and hoppers as we did with mice in figure \ref{fig:leslie_phase}. The result is a completely different behavior shown in figure \ref{fig:leslie_locust_phase}.
 
@@ -495,7 +496,7 @@ The expansion of this determinant results in a $n-th$ degree equation in terms o
 c_n \, \lambda^n +c_{n-1} \, \lambda^{n-1}  + \dots  + c_1 \, \lambda + c_0 = 0 \nonumber
 \end{equation}
 
-\subsection{Eigenvalues and eigenvectors} 
+\subsection{The eigenvalues of a differential equation} 
 
 \subsubsection{Real eigenvalues}
 A matrix $\mathbf{A}$ with size $n \times n$ has n vectors $\mathbf{v_i}$ for $i = 1 \dots n$ called eigenvectors, and each eigenvector has an eigenvalue ($\lambda_i$) such that every pair of eigenvector and eigenvalue satisfy equation (\ref{eigendefinition}).
